#672 Implement interpretation and indexing scripts